--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="mxl-tool">
-    <h2>Select an MXL file</h2>
+    <h2>Select an MXL file 1</h2>
     <input type="file" id="fileInput" accept=".mxl" />
     <pre id="output">Waiting for file...</pre>
   </div>
